src/objects/EFColumn__c.object
<CustomObject>
    <fields>
        <fullName>EFSheet__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>EF Sheet</label>
        <referenceTo>EFSheet__c</referenceTo>
        <relationshipLabel>EF Columns</relationshipLabel>
        <relationshipName>EFColumns</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <defaultValue>15</defaultValue>
        <label>Width</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>EF Column</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EF Columns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>